Fix broken flex-box on Safari

--- a/src/app/components/organisms/header.scss
+++ b/src/app/components/organisms/header.scss
@@ -6,7 +6,7 @@ header {
   margin: 7px 13px;
   
   a {
-    flex: 1;
+    flex: 1 1 auto;
     color: $color-white;
 
     img {
