--- a/src/app/components/routes/messages/series.scss
+++ b/src/app/components/routes/messages/series.scss
@@ -16,7 +16,7 @@ div.inner {
 }
 
 md-nav-list {
-  flex: 1;
+  flex: 1 1 auto;
   margin: 0 35px;
 
   a {
